--- a/src/scss/_bootstrap-variables.scss
+++ b/src/scss/_bootstrap-variables.scss
@@ -38,19 +38,22 @@ $black:    #000;
 // $indigo:              #6610f2;
 // $purple:              #6f42c1;
 // $pink:                #e83e8c;
-$red:                 #DB504A;
-// $orange:              #fd7e14;
-$yellow:              #DB7C26;
-$green:               #417B5A;
-$teal:                #007b84;
-$cyan:                #05668D;
-$modal-border:        #979797;
-$form-btn-bg:         #D7D7D7;
-$dark-grey:           #434343;
-$dark:                #333333;
-$input-text-color:    #7f7f7f;
-$input-border-color:  #C9C9C9;
-
+$red:                       #DB504A;
+// $orange:                   #fd7e14;
+$yellow:                    #DB7C26;
+$green:                     #417B5A;
+$teal:                      #007b84;
+$cyan:                      #05668D;
+$modal-border:              #979797;
+$form-btn-bg:               #D7D7D7;
+$dark-grey:                 #434343;
+$dark:                      #333333;
+$input-text-color:          #7f7f7f;
+$input-border-color:        #C9C9C9;
+$header-icon-color:         #C7C7C7;
+$header-icon-active-color:    $white;
+$link-icon-color:           #B0B0B0;
+$link-icon-active-color:    #5E5E5E;
 
 $theme-colors: (
   "primary":          #007b84,
