--- a/src/scss/components/_forms.scss
+++ b/src/scss/components/_forms.scss
@@ -18,6 +18,56 @@
 }
 
 // Validation 
-.ng-invalid:not(form)  {
-  border: 1px solid $danger;
+.ng-pristine.ng-invalid:not(form)  {
+  box-shadow: 0 0 0 0.2rem rgba($primary, 0);
+  @include fadeIn(
+    $duration: 500ms,
+    $delay: 100ms,
+    $function: ease-in-out,
+    $fill: both
+  );
+}
+
+.ng-dirty.ng-valid:not(form)  {
+  box-shadow: 0 0 0 0.2rem rgba($primary, 0);
+  @include fadeIn(
+    $duration: 500ms,
+    $delay: 100ms,
+    $function: ease-in-out,
+    $fill: both
+  );
+}
+
+.ng-dirty.ng-invalid:not(form)   {
+  border: 1px solid $danger !important;
+  box-shadow: 0 0 0 0.2rem rgba($danger, 0);
+  @include shake(
+    $duration: 500ms,
+    $delay: 0,
+    $function: linear,
+    $fill: both
+  );
+}
+
+// Shake animation Override
+@keyframes shake {
+  from,
+  to {
+    transform: translate3d(0, 0, 0);
+  }
+
+  10%,
+  30%,
+  50%,
+  70%,
+  90% {
+    transform: translate3d(-2px, 0, 0);
+  }
+
+  20%,
+  40%,
+  60%,
+  80% {
+    transform: translate3d(2px, 0, 0);
+  }
 }
