--- a/src/scss/components/_card.scss
+++ b/src/scss/components/_card.scss
@@ -2,6 +2,7 @@
 
   .card-header {
     padding: 6px 5px;
+    z-index: 999;
 
     .ml-section {
       text-transform: uppercase;
@@ -11,7 +12,34 @@
   }
 
   .card-body {
+    
+    position: relative;
     padding: 15px 10px;
+
+    .info-panel {
+      z-index: 888;
+    }
+
+    .btn-close {
+      position: absolute;
+      right: 10px;
+      z-index: 999;
+    }
+
+    .card-info {
+
+      h3 {
+        margin: 20px 0 5px 0;
+      }
+      p {
+        margin: 0 0 10px 0;
+      }
+    }
+
+    
+
+    
+    
   }
 
   .list-group {
@@ -25,7 +53,13 @@
     padding: 1px;
     height: 44px;
   }
+
 }
 
 
-
+@include media-breakpoint-up(sm) {
+  .add-link {
+    margin-top: 50px;
+    
+  }
+}
