--- a/src/scss/components/_list-group.scss
+++ b/src/scss/components/_list-group.scss
@@ -13,7 +13,7 @@
     font-size: 13px;
     font-weight: 400;
     line-height: 20px;
-    padding: 10px;
+    padding: 10px 0;
 }
 
 .list-group-item-flex .ml-col .ml-sticker:only-child {
