--- a/src/styles.scss
+++ b/src/styles.scss
@@ -4,7 +4,7 @@
 
 @import "./scss/bootstrap-variables";
 
-.ml {
+.my-links {
 
   /* REQUIRED */
   @import "../node_modules/bootstrap/scss/functions";
@@ -59,45 +59,4 @@
 
   // @import "./scss/components/list";
 
-}
-
-
-
-.ml-icon {
-  align-items: center;
-  border-radius: .25rem;
-  cursor: pointer;
-  display: flex;
-  height: 2rem;
-  line-height: 2rem;
-  width: 2rem;
-  font-size: 16px;
-  font-weight: 400;
-  justify-content: center;
-  line-height: 24px;
-  padding: 0;
-  text-transform: none;
-  vertical-align: baseline;
-  background-color: transparent;
-  border-color: transparent;
-  color: #6b6c7e;
-  transition: 
-    color .15s ease-in-out,
-    background-color .15s ease-in-out,
-    border-color .15s ease-in-out,
-    box-shadow .15s ease-in-out;
-  overflow: hidden;
-  text-decoration: none;
-
-  svg {
-    margin-top: 0;
-    overflow: hidden;
-    display: inline-block;
-    fill:  #6b6c7e;
-    height: 1em;
-    pointer-events: none;
-    vertical-align: middle;
-    width: 1em;
-    cursor: pointer;
-  }
 }
