--- a/src/app/link-edit/link-edit.component.html
+++ b/src/app/link-edit/link-edit.component.html
@@ -7,7 +7,7 @@
       <div *ngIf="linkData.linkType === 'Ikon'">Customise Ikon content link</div>
     </div>
 
-    <button type="button" class="close pull-right" aria-label="Close" (click)="bsModalRef.hide()">
+    <button type="button" class="close pull-right" aria-label="Close" (click)="hide()">
       <span aria-hidden="true">&times;</span>
     </button>
 
@@ -93,7 +93,7 @@
   </div>
 
   <div class="modal-footer">
-    <button type="button" class="btn btn-default" (click)="bsModalRef.hide()">Close</button>
+    <button type="button" class="btn btn-default" (click)="hide()">Close</button>
 	  <button type="submit" class="btn btn-primary" (click)="openModalWithComponent()">Update Link</button>
   </div>
 
